log
Mon 12 Sep 2022 12:28:53 AM UTC: 
 tests:  0|6
total_score: 0/70
a95b208
Mon 12 Sep 2022 12:33:42 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘HaspMap’; did you mean ‘HashMap’?
   55 |   HaspMap* M = (HaspMap*)malloc(sizeof(HaspMap)*capacity);
      |   ^~~~~~~
      |   HashMap
hashmap.c:55:17: error: ‘HaspMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   55 |   HaspMap* M = (HaspMap*)malloc(sizeof(HaspMap)*capacity);
      |                 ^~~~~~~
      |                 HashMap
hashmap.c:55:17: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:25: error: expected expression before ‘)’ token
   55 |   HaspMap* M = (HaspMap*)malloc(sizeof(HaspMap)*capacity);
      |                         ^
hashmap.c:56:4: error: request for member ‘buckets’ in something not a structure or union
   56 |   M->buckets = (Pair**)calloc(capacity,sizeof(Pair*));
      |    ^~
hashmap.c:57:4: error: request for member ‘capacity’ in something not a structure or union
   57 |   M->capacity = capacity;
      |    ^~
hashmap.c:58:4: error: request for member ‘size’ in something not a structure or union
   58 |   M->size = 0;
      |    ^~
hashmap.c:59:4: error: request for member ‘current’ in something not a structure or union
   59 |   M->current = -1;
      |    ^~
hashmap.c:60:10: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |   return M;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
cead041
Mon 12 Sep 2022 12:34:06 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘HashpMap’; did you mean ‘HashMap’?
   55 |   HashpMap* M = (HashpMap*)malloc(sizeof(HashpMap)*capacity);
      |   ^~~~~~~~
      |   HashMap
hashmap.c:55:18: error: ‘HashpMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   55 |   HashpMap* M = (HashpMap*)malloc(sizeof(HashpMap)*capacity);
      |                  ^~~~~~~~
      |                  HashMap
hashmap.c:55:18: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:27: error: expected expression before ‘)’ token
   55 |   HashpMap* M = (HashpMap*)malloc(sizeof(HashpMap)*capacity);
      |                           ^
hashmap.c:56:4: error: request for member ‘buckets’ in something not a structure or union
   56 |   M->buckets = (Pair**)calloc(capacity,sizeof(Pair*));
      |    ^~
hashmap.c:57:4: error: request for member ‘capacity’ in something not a structure or union
   57 |   M->capacity = capacity;
      |    ^~
hashmap.c:58:4: error: request for member ‘size’ in something not a structure or union
   58 |   M->size = 0;
      |    ^~
hashmap.c:59:4: error: request for member ‘current’ in something not a structure or union
   59 |   M->current = -1;
      |    ^~
hashmap.c:60:10: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |   return M;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
86ce4da
Mon 12 Sep 2022 12:34:23 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
315384a
Mon 12 Sep 2022 12:39:19 AM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   53 |     if(i = map->capacity){
      |        ^
cc1: all warnings being treated as errors
Compilation failed
6ad36d5
Mon 12 Sep 2022 12:43:10 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
383b8b9
Mon 12 Sep 2022 12:44:22 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:78:24: error: statement with no effect [-Werror=unused-value]
   78 |     eliminatePair->key ==NULL;
      |                        ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6126c6c
Mon 12 Sep 2022 12:45:28 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
153d050
Mon 12 Sep 2022 12:46:30 AM UTC: 
 hashmap.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
73dec6f
Mon 12 Sep 2022 12:48:17 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:78:24: error: statement with no effect [-Werror=unused-value]
   78 |     eliminatePair->key ==NULL;
      |                        ^
cc1: all warnings being treated as errors
Compilation failed
1f3863e
Mon 12 Sep 2022 12:48:23 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
b0999d0
Mon 12 Sep 2022 12:50:47 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
d4ab1f6
Mon 12 Sep 2022 01:03:26 AM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:116:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  116 |   return ;
      |   ^~~~~~
hashmap.c:114:8: note: declared here
  114 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
hashmap.c: In function ‘firstMap’:
hashmap.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
hashmap.c:108:7: error: ‘p’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  108 |     if(p!=NULL){
      |       ^
cc1: all warnings being treated as errors
Compilation failed
47a358e
Mon 12 Sep 2022 01:34:12 AM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:120:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  120 |   return ;
      |   ^~~~~~
hashmap.c:118:8: note: declared here
  118 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cbdedb6
Mon 12 Sep 2022 01:34:53 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
2b32e61
Tue 27 Sep 2022 08:32:04 PM UTC: 
 tests:  16|1
total_score: 60/70
c17b8e6
Tue 27 Sep 2022 08:33:16 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  17|0
total_score: 70/70
612ee77
Tue 27 Sep 2022 08:33:41 PM UTC: 
 hashmap.c | 12 +-----------
 1 file changed, 1 insertion(+), 11 deletions(-)
 tests:  16|1
total_score: 60/70
b5ab987
